src/objects/C501_Account_Merge_Member__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Merge Members</relationshipLabel>
        <relationshipName>Account_Merge_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merge_Metric__c</fullName>
        <label>Merge Metric</label>
        <referenceTo>C501_Merge_Metric__c</referenceTo>
        <relationshipLabel>Account Merge Members</relationshipLabel>
        <relationshipName>Account_Merge_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Potential_Merges__c</fullName>
        <label>Potential Merges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Merge Member</label>
    <nameField>
        <displayFormat>Merge Member {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Merge Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>